Better implementation scripts

--- a/analysis/CoefficientSymbolicTests.ipynb
+++ b/analysis/CoefficientSymbolicTests.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "turkish-match",
+   "id": "fitting-replication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "incredible-thread",
+   "id": "virgin-toolbox",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "211b17c9-32ee-4e8f-921c-821579b76cea",
+   "id": "surgical-retreat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5fc25064-11f8-409b-9bb9-9878805d8205",
+   "id": "yellow-tissue",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4e7276fa-b8eb-4403-a737-b1fe974be5d0",
+   "id": "danish-jersey",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "accepting-binary",
+   "id": "literary-future",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ac6caa95-3b7c-4724-a5c5-45bf4c3fc482",
+   "execution_count": 4,
+   "id": "ordinary-munich",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,18 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "intense-lithuania",
+   "execution_count": 5,
+   "id": "suburban-organizer",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-491b306b6fe1>:2: UserWarning:\n",
-      "\n",
-      "Boolean Series key will be reindexed to match DataFrame index.\n",
-      "\n"
+      "<ipython-input-5-491b306b6fe1>:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  fig = px.line(frame[frame['CoeffType']!='Type3Pad'][frame['CoeffType']!='Type4'],\n"
      ]
     }
    ],
@@ -312,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b3b3ce7a-719d-47e7-aee6-7e457ca324e1",
+   "execution_count": 6,
+   "id": "frequent-estate",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +477,7 @@
        "[384 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,27 +488,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ddd7d11d-6455-49b1-a757-051806b8e5f2",
+   "execution_count": 11,
+   "id": "colonial-flood",
    "metadata": {},
    "outputs": [],
    "source": [
     "for p in [2,4,8,16]:\n",
     "    for coeffType in CoeffType:\n",
     "        frame = pd.DataFrame(columns=['N', 'FfaMults', 'PolyMults'])\n",
+    "        frame = frame.append(dict(N=0, FfaMults=0, PolyMults=0), ignore_index=True)\n",
     "        for nByP in [1,2,3,4,5]:\n",
     "            ws = genCoeffs(coeffType, p*nByP)\n",
     "            \n",
     "            mults = ffa_eqns(coeffType, p, nByP)\n",
     "            frame = frame.append(dict(N=(p*nByP), FfaMults=ffa_eqns(coeffType, p, nByP), PolyMults=poly_eqns(coeffType, p, nByP)), ignore_index=True)\n",
     "            \n",
-    "            frame.to_csv(f'outputs/coeffs_p{p}_{coeffType.name}.csv', index = False, header=True)"
+    "        frame.to_csv(f'outputs/coeffs_p{p}_{coeffType.name}.csv', index = False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d062c054-8ae9-4e43-bcbe-3f55e5eb574c",
+   "execution_count": 12,
+   "id": "executive-wellington",
    "metadata": {},
    "outputs": [
     {
@@ -534,125 +533,63 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CoeffType</th>\n",
        "      <th>N</th>\n",
        "      <th>FfaMults</th>\n",
        "      <th>PolyMults</th>\n",
-       "      <th>Structure</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Type1Pad</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FFA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Type2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FFA</td>\n",
+       "      <td>16</td>\n",
+       "      <td>52</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Type3Pad</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FFA</td>\n",
+       "      <td>32</td>\n",
+       "      <td>100</td>\n",
+       "      <td>128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Type4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FFA</td>\n",
+       "      <td>48</td>\n",
+       "      <td>152</td>\n",
+       "      <td>192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NonLinPhase</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>FFA</td>\n",
+       "      <td>64</td>\n",
+       "      <td>200</td>\n",
+       "      <td>256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>Type2</td>\n",
-       "      <td>80</td>\n",
-       "      <td>403</td>\n",
-       "      <td>640</td>\n",
-       "      <td>FFA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>Type3Pad</td>\n",
-       "      <td>80</td>\n",
-       "      <td>394</td>\n",
-       "      <td>640</td>\n",
-       "      <td>FFA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>Type4</td>\n",
-       "      <td>80</td>\n",
-       "      <td>402</td>\n",
-       "      <td>640</td>\n",
-       "      <td>FFA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>NonLinPhase</td>\n",
-       "      <td>80</td>\n",
-       "      <td>405</td>\n",
-       "      <td>1280</td>\n",
-       "      <td>FFA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>HalfBand</td>\n",
+       "      <th>5</th>\n",
        "      <td>80</td>\n",
        "      <td>252</td>\n",
        "      <td>320</td>\n",
-       "      <td>FFA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>120 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       CoeffType   N FfaMults PolyMults Structure\n",
-       "0       Type1Pad   2        2         2       FFA\n",
-       "1          Type2   2        3         2       FFA\n",
-       "2       Type3Pad   2        2         2       FFA\n",
-       "3          Type4   2        2         2       FFA\n",
-       "4    NonLinPhase   2        3         4       FFA\n",
-       "..           ...  ..      ...       ...       ...\n",
-       "115        Type2  80      403       640       FFA\n",
-       "116     Type3Pad  80      394       640       FFA\n",
-       "117        Type4  80      402       640       FFA\n",
-       "118  NonLinPhase  80      405      1280       FFA\n",
-       "119     HalfBand  80      252       320       FFA\n",
-       "\n",
-       "[120 rows x 5 columns]"
+       "    N FfaMults PolyMults\n",
+       "0   0        0         0\n",
+       "1  16       52        64\n",
+       "2  32      100       128\n",
+       "3  48      152       192\n",
+       "4  64      200       256\n",
+       "5  80      252       320"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2336807c-c922-43ca-8ae5-3fd9a5d5f147",
+   "id": "useful-benjamin",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -672,9 +609,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 - python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ipython_python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
