Finished running reproducable tests

--- a/analysis/CoefficientSymbolicTests.ipynb
+++ b/analysis/CoefficientSymbolicTests.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "fitting-replication",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c58a8c2f-b593-444d-8afb-347c405b9b16",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "dd6867cc-f26f-484a-823b-c345eb8914d1",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1234614d-8079-416d-99f8-a05d69e0e37c",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "surgical-retreat",
    "metadata": {},
    "outputs": [],
@@ -267,37 +267,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "yellow-tissue",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running p2\n",
-      "Running nByP1\n",
-      "Running nByP2\n",
-      "Running nByP3\n",
-      "Running nByP4\n",
-      "Running p4\n",
-      "Running nByP1\n",
-      "Running nByP2\n",
-      "Running nByP3\n",
-      "Running nByP4\n",
-      "Running p8\n",
-      "Running nByP1\n",
-      "Running nByP2\n",
-      "Running nByP3\n",
-      "Running nByP4\n",
-      "Running p16\n",
-      "Running nByP1\n",
-      "Running nByP2\n",
-      "Running nByP3\n",
-      "Running nByP4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "frame = pd.DataFrame(columns=['FIR', 'CoeffType', 'Parallelism', 'N', 'SubfiltN', 'Mults'])\n",
     "\n",
@@ -323,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "literary-future",
    "metadata": {},
    "outputs": [],
@@ -341,42 +314,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "a3a8dca9-e651-4406-8d43-c330786bd7c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all(frame[frame['FIR']=='FFAEqn']['Mults'].values == frame[frame['FIR']=='FFA']['Mults'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "ff239e19-710f-4063-a57a-49a4f8fa45b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all(frame[frame['FIR']=='PolyEqn']['Mults'].values == frame[frame['FIR']=='Poly']['Mults'].values)"
    ]
@@ -410,22 +361,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "colonial-flood",
    "metadata": {},
    "outputs": [],
    "source": [
+    "frame = pd.DataFrame(columns=['p', 'structure', 'coeff_type', 'N', 'mults'])\n",
+    "\n",
     "for p in [2,4,8,16]:\n",
     "    for coeffType in CoeffType:\n",
-    "        frame = pd.DataFrame(columns=['N', 'FfaMults', 'PolyMults'])\n",
-    "        frame = frame.append(dict(N=0, FfaMults=0, PolyMults=0), ignore_index=True)\n",
     "        for nByP in [1,2,3,4,5]:\n",
     "            ws = genCoeffs(coeffType, p*nByP)\n",
+    "            frame = frame.append(dict(\n",
+    "                p=p,\n",
+    "                structure='FFA',\n",
+    "                coeff_type = coeffType.name,\n",
+    "                N=(p*nByP),\n",
+    "                mults=ffa_eqns(coeffType, p, nByP)\n",
+    "            ), ignore_index=True).append(dict(\n",
+    "                p=p,\n",
+    "                structure='Poly',\n",
+    "                coeff_type = coeffType.name,\n",
+    "                N=(p*nByP),\n",
+    "                mults=poly_eqns(coeffType, p, nByP)\n",
+    "            ), ignore_index=True)\n",
     "            \n",
-    "            mults = ffa_eqns(coeffType, p, nByP)\n",
-    "            frame = frame.append(dict(N=(p*nByP), FfaMults=ffa_eqns(coeffType, p, nByP), PolyMults=poly_eqns(coeffType, p, nByP)), ignore_index=True)\n",
-    "            \n",
-    "        frame.to_csv(f'outputs/coeffs_p{p}_{coeffType.name}.csv', index = False, header=True)"
+    "frame = frame.pivot(index=['N'], columns=['structure','p', 'coeff_type'], values='mults')\n",
+    "frame.columns = ['_'.join([str(c) for c in col]) for col in frame.columns.values]\n",
+    "frame.to_csv(f'outputs/coeffs_eqns.csv', index = True, header=True)"
    ]
   }
  ],
