--- a/analysis/ImplementationResults.ipynb
+++ b/analysis/ImplementationResults.ipynb
@@ -1,13 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Generating Implementation Results\n",
+    "\n",
+    "Here we will programmatically generate implementation results for different instances of our filter designs with Vivado.\n",
+    "\n",
+    "We'll do a parameter sweep over:\n",
+    "  * parallelisms\n",
+    "  * number of taps\n",
+    "  * type of coefficient set (i.e. minimum/non-linear phase, types I/II/III/IV, or half-band)\n",
+    "  * and filter structure (our FFA + MCM, our Polyphase + MMC, and LogiCORE FIR Compiler)\n",
+    "\n",
+    "Representations of the different coefficient sets are defined in `coeffs.py` and representations and implementation functions for each filter structure are defined in `filters.py`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import plotly.express as px\n",
     "from math import *\n",
     "\n",
     "from coeffs import ResponseType, CoeffsMinPhase, CoeffsType1Pad, CoeffsType2, CoeffsHalfBand\n",
@@ -15,23 +35,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's define a few lists of constructors for each coefficient style and each filter structure. After that, all we need is a few nested loops around our `fir.impl()` call. This will take a _while__... somewhere in the order of a whole weekend!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'group': './outputs', 'name': 'Ssr_P2_IB16_FCLK775.0_WS_N2_CB16_minphase_LP_F0-0.3-0.4-1.0', 'structure': 'Ssr', 'in_width': 16, 'c_width': 16, 'parallelism': 2, 'fclk_actual': 1029.8661174047372, 'taps': 2, 'luts': 26, 'regs': 155, 'clbs': 16, 'dsps': 4}\n",
-      "{'group': './outputs', 'name': 'PolyMcm_P2_IB16_FCLK775.0_WS_N2_CB16_minphase_LP_F0-0.3-0.4-1.0', 'structure': 'PolyMcm', 'in_width': 16, 'c_width': 16, 'parallelism': 2, 'fclk_actual': 816.9934640522875, 'taps': 2, 'luts': 306, 'regs': 605, 'clbs': 66, 'dsps': 0}\n",
-      "{'group': './outputs', 'name': 'FfaMcm_P2_IB16_FCLK775.0_WS_N2_CB16_minphase_LP_F0-0.3-0.4-1.0', 'structure': 'FfaMcm', 'in_width': 16, 'c_width': 16, 'parallelism': 2, 'fclk_actual': 586.8544600938967, 'taps': 2, 'luts': 409, 'regs': 654, 'clbs': 73, 'dsps': 0}\n",
-      "{'group': './outputs', 'name': 'Ssr_P2_IB16_FCLK775.0_WS_N2_CB16_type1p_LP_F0-0.3-0.4-1.0', 'structure': 'Ssr', 'in_width': 16, 'c_width': 16, 'parallelism': 2, 'fclk_actual': 977.5171065493645, 'taps': 2, 'luts': 26, 'regs': 153, 'clbs': 15, 'dsps': 4}\n",
-      "{'group': './outputs', 'name': 'PolyMcm_P2_IB16_FCLK775.0_WS_N2_CB16_type1p_LP_F0-0.3-0.4-1.0', 'structure': 'PolyMcm', 'in_width': 16, 'c_width': 16, 'parallelism': 2, 'fclk_actual': 1069.51871657754, 'taps': 2, 'luts': 49, 'regs': 68, 'clbs': 11, 'dsps': 0}\n",
-      "{'group': './outputs', 'name': 'FfaMcm_P2_IB16_FCLK775.0_WS_N2_CB16_type1p_LP_F0-0.3-0.4-1.0', 'structure': 'FfaMcm', 'in_width': 16, 'c_width': 16, 'parallelism': 2, 'fclk_actual': 798.7220447284345, 'taps': 2, 'luts': 105, 'regs': 169, 'clbs': 24, 'dsps': 0}\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "coeff_constrs = [\n",
     "    lambda taps : CoeffsMinPhase(ResponseType.LP, [0,0.3,0.4,1.0], taps, 16),\n",
@@ -62,44 +78,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we've generated everything we need! All the Vivado runs will be in the `outputs/` folder. While we have the parsed results in memory though, let's save them as a CSV for posterity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "display(px.line(df, x='taps', facet_col='parallelism',y='clbs', color='structure', log_x=True))\n",
-    "display(px.line(df, x='taps', facet_col='parallelism',y='luts', color='structure', log_x=True))\n",
-    "display(px.line(df, x='taps', facet_col='parallelism',y='regs', color='structure', log_x=True))\n",
-    "display(px.line(df, x='taps', facet_col='parallelism',y='dsps', color='structure', log_x=True))"
+    "df = pd.DataFrame(results)\n",
+    "\n",
+    "df.to_csv('outputs/full_impl.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And of course, if you want to load the results back in again, you can run `df = pd.read_csv('outputs/full_impl.csv')`.\n",
+    "\n",
+    "Below we will plot our results for CLB usage, DSP usage, and estimated achieved frequency."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_export = df.copy()\n",
-    "df_export['dsps'] = df_export['dsps']*100/4272\n",
-    "df_export = df_export.pivot(index=['taps'], columns=['structure','parallelism'], values='dsps')\n",
-    "df_export.columns = ['_'.join([str(c) for c in col]) for col in df_export.columns.values]\n",
-    "\n",
-    "df_export.to_csv(f'outputs/dsps_{group}.csv', index = True, header=True)"
+    "display(px.line(df, x='taps', facet_col='parallelism', facet_row='coeff_class',y='clbs', color='structure', height=1000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_export = df.copy()\n",
-    "df_export['clbs'] = df_export['clbs']*100/53160\n",
-    "df_export = df_export.pivot(index=['taps'], columns=['structure','parallelism'], values='clbs')\n",
-    "df_export.columns = ['_'.join([str(c) for c in col]) for col in df_export.columns.values]\n",
+    "display(px.line(df, x='taps', facet_col='parallelism', facet_row='coeff_class',y='dsps', color='structure', height=1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(px.line(df, x='taps', facet_col='parallelism', facet_row='coeff_class',y='fclk_actual', color='structure', height=1000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's export a flattened CSV file for each of these metrics. This is a little bit easier to work with in LaTeX/pgfplots than the earlier CSV."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (field, scale) in [('dsps', 100/4272), ('clbs', 100/53160), ('fclk_actual', 1)]:\n",
+    "    df_export = df.copy()\n",
+    "    df_export[field] = df_export[field]*scale\n",
+    "    df_export = df_export.pivot(index=['taps'], columns=['structure','parallelism', 'coeff_class'], values=field)\n",
+    "    df_export.columns = ['_'.join([str(c) for c in col]) for col in df_export.columns.values]\n",
     "\n",
-    "df_export.to_csv(f'outputs/clbs_{group}.csv', index = True, header=True)"
+    "    df_export.to_csv(f'outputs/summary_{field}.csv', index = True, header=True)"
    ]
   }
  ],
